Change multiselect dropdown input box sizing to content-box to avoid horizontal scroll

--- a/src/common/components/multiSelectDropdown/multiSelectDropdown.module.scss
+++ b/src/common/components/multiSelectDropdown/multiSelectDropdown.module.scss
@@ -102,6 +102,7 @@
       padding: 0 var(--spacing-s) 0 var(--spacing-2-xl);
       border: none;
       outline: none;
+      box-sizing: content-box;
     }
 
     svg {
